expected/main/core/bitdata/bitdata5.err
ERROR: "actual/main/core/bitdata/bitdata5.lc", line 1
bitdata U    = X   [ x :: U ]      -- invalid, self reference
^
Unable to determine a unique BitSize value for U

ERROR: Aborting after previously reported error

